Add some features for message consuming. First version of Test class implemented.